AzureTemplates/DataScienceTemplate/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_Centos_adminPassword": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualMachines_Centos_name": {
            "defaultValue": "Centos",
            "type": "String"
        },
        "networkInterfaces_centos803_name": {
            "defaultValue": "centos803",
            "type": "String"
        },
        "networkSecurityGroups_Centos_nsg_name": {
            "defaultValue": "Centos-nsg",
            "type": "String"
        },
        "publicIPAddresses_Centos_ip_name": {
            "defaultValue": "Centos-ip",
            "type": "String"
        },
        "virtualNetworks_centos_vnet_name": {
            "defaultValue": "centos-vnet",
            "type": "String"
        },
        "storageAccounts_centos568_name": {
            "defaultValue": "centos568",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/cc510bcd-49f8-45e3-b464-41bc8b6ba981/resourceGroups/centos/providers/Microsoft.Compute/virtualMachines/Centos'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_Centos_name')]",
            "apiVersion": "2015-06-15",
            "location": "eastus",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_A3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "OpenLogic",
                        "offer": "[concat(parameters('virtualMachines_Centos_name'),'CentOS', parameters('virtualMachines_Centos_name'))]",
                        "sku": "7.2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('virtualMachines_Centos_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_centos568_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_Centos_name'),'201672511230.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_Centos_name')]",
                    "adminUsername": "rlisiecki",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/rlisiecki/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAQEAv8oQag+ybfVNa34KF4nHCfPPRktdz32qnkiZuhSCRoEC0aUj7+G7u9R/yCGM4/n2tt70Xph73NYNCGyPVGfCVEEtc4YOz228i9OPtlxhqVo7Eu/018libpi/zsIfDBPNQQG/A2gznIUnZVtrlH+3eQPEdcQTVUriwmI/lC5OSNN/dfeU4s6m2/4I6puxJ8NVW7MP3GKlnD450lHBZ0OEc6Xkt0CUR50kvesUDX3Qo6AN9ccurWwI6e8VirKvxqbpDKtTtPE5rhohv/bEODp/US2WkJa6lDqzRMvo4Xqi8fIX3oeQ65fer+cOOdt7mVAH/F9AhuugGpiGliuNvzFnYQ=="
                                }
                            ]
                        }
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('virtualMachines_Centos_adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_centos803_name'))]"
                        }
                    ]
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_centos568_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_centos803_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cc510bcd-49f8-45e3-b464-41bc8b6ba981/resourceGroups/centos/providers/Microsoft.Network/networkInterfaces/centos803'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_centos803_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.1.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Centos_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_centos_vnet_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Centos_nsg_name'))]"
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Centos_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_centos_vnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Centos_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cc510bcd-49f8-45e3-b464-41bc8b6ba981/resourceGroups/centos/providers/Microsoft.Network/networkSecurityGroups/Centos-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_Centos_nsg_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Codenvy_1",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80-81",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "443-444",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443-444",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "32768-65535",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "32768-65535",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1021,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cc510bcd-49f8-45e3-b464-41bc8b6ba981/resourceGroups/centos/providers/Microsoft.Network/publicIPAddresses/Centos-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_Centos_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "lodscodenvy"
                }
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cc510bcd-49f8-45e3-b464-41bc8b6ba981/resourceGroups/centos/providers/Microsoft.Network/virtualNetworks/centos-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_centos_vnet_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastus",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.1.0.0/24"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/cc510bcd-49f8-45e3-b464-41bc8b6ba981/resourceGroups/centos/providers/Microsoft.Storage/storageAccounts/centos568'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_centos568_name')]",
            "apiVersion": "2016-01-01",
            "location": "eastus",
            "tags": {},
            "properties": {},
            "resources": [],
            "dependsOn": []
        }
    ]
}
